fixes home icon alignment with brand icon

--- a/static-build/components/Breadcrumbs/styles.css
+++ b/static-build/components/Breadcrumbs/styles.css
@@ -7,7 +7,7 @@
   position: relative;
   font-size: var(--font-size--detail);
   margin-bottom: var(--spacing-6);
-  margin-left: calc(var(--spacing-6) * -1);
+  margin-left: calc(calc(var(--spacing-6) + var(--spacing-2)) * -1);
   padding-left: var(--spacing-6);
   padding-bottom: var(--spacing-3);
 
@@ -34,6 +34,7 @@
 .home {
   @media (orientation: landscape) {
     margin-left: -2.5rem;
+    gap: 0;
   }
 
   & svg {
